[gd_scene load_steps=4 format=3 uid="uid://bmuedem6qyet0"]

[ext_resource type="Script" path="res://scenes/Slingshot.gd" id="1_2o1ui"]
[ext_resource type="Texture2D" uid="uid://bmupp6agafa4q" path="res://assets/sprites/png/slingshot.png" id="2_4cf6q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tbefb"]
radius = 33.93

[node name="Slingshot" type="Node2D"]
script = ExtResource("1_2o1ui")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 14)
scale = Vector2(4.9375, 4.9375)
texture = ExtResource("2_4cf6q")

[node name="LeftLine" type="Line2D" parent="."]
unique_name_in_owner = true
position = Vector2(2.08165e-12, 2.08165e-12)
points = PackedVector2Array(52, 90, 2.08165e-12, 2.08165e-12)

[node name="RightLine" type="Line2D" parent="."]
unique_name_in_owner = true
position = Vector2(2.08165e-12, 2.08165e-12)
points = PackedVector2Array(-52, 90, 0, 0)

[node name="TouchArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchArea"]
shape = SubResource("CircleShape2D_tbefb")

[node name="SlingshotCenter" type="Marker2D" parent="."]
unique_name_in_owner = true

[connection signal="input_event" from="TouchArea" to="." method="_on_touch_area_input_event"]
